--- a/libms/library_management_system/doctype/library_settings/library_settings.json
+++ b/libms/library_management_system/doctype/library_settings/library_settings.json
@@ -1,48 +1,48 @@
 {
  "actions": [],
  "allow_rename": 1,
- "creation": "2023-07-11 10:41:33.749513",
+ "creation": "2023-07-16 13:30:16.742096",
  "default_view": "List",
  "doctype": "DocType",
  "editable_grid": 1,
  "engine": "InnoDB",
  "field_order": [
-  "title"
+  "loan_period",
+  "max_articles"
  ],
  "fields": [
   {
-   "fieldname": "title",
-   "fieldtype": "Data",
-   "in_list_view": 1,
-   "label": "Title",
-   "reqd": 1
+   "fieldname": "loan_period",
+   "fieldtype": "Int",
+   "label": "Loan Period"
+  },
+  {
+   "fieldname": "max_articles",
+   "fieldtype": "Int",
+   "label": "Maximum Number of Issued Articles "
   }
  ],
  "index_web_pages_for_search": 1,
+ "issingle": 1,
  "links": [],
- "modified": "2023-07-11 10:42:32.348800",
+ "modified": "2023-07-16 13:30:16.742096",
  "modified_by": "Administrator",
  "module": "Library Management System",
- "name": "Category",
+ "name": "Library Settings",
  "owner": "Administrator",
  "permissions": [
   {
    "create": 1,
    "delete": 1,
    "email": 1,
-   "export": 1,
    "print": 1,
    "read": 1,
-   "report": 1,
    "role": "System Manager",
    "share": 1,
    "write": 1
   }
  ],
- "quick_entry": 1,
- "show_title_field_in_link": 1,
  "sort_field": "modified",
  "sort_order": "DESC",
- "states": [],
- "title_field": "title"
+ "states": []
 }
